Bug 1030521 - Make CHECK_EQUAL require its actual/expected expressions have the same signedness, to prevent introduction of compiler warnings.  r=jorendorff