js/src/jsapi-tests/testRegExp.cpp
@@ -27,7 +27,7 @@ BEGIN_TEST(testGetRegExpFlags)
 
     EVAL("/foopy/", &val);
     obj = val.toObjectOrNull();
-    CHECK_EQUAL(JS_GetRegExpFlags(cx, obj), 0);
+    CHECK_EQUAL(JS_GetRegExpFlags(cx, obj), 0u);
 
     EVAL("/foopy/g", &val);
     obj = val.toObjectOrNull();
